fixing nav bar spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ a:link, a:visited {
 
 .header-logo {
     align-self: middle;
-    width: auto;
+    width: 80px;
 }
 
 .nav-list {
